--- a/.classpath
+++ b/.classpath
@@ -9,5 +9,7 @@
 	<classpathentry kind="lib" path="jgoodies-forms-1.8.0.jar" sourcepath="jgoodies-forms-1.8.0-sources.jar"/>
 	<classpathentry kind="lib" path="miglayout15-swing.jar" sourcepath="miglayout-src.zip"/>
 	<classpathentry kind="lib" path="C:/Users/Thinh/eclipse-workspace-2/Swing/jar/mysql-connector-java-8.0.18.jar"/>
+	<classpathentry kind="lib" path="KGradientPanel.jar"/>
+	<classpathentry kind="lib" path="KControls.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
